samples/_failures_safe/1761413506_c4b32e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec1d0860.c: In function ‘main’:
./samples/SAFE/__tmp_ec1d0860.c:155:12: error: missing terminating " character
  155 |     printf("Enter starting node for DFS
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ec1d0860.c:155:5: error: expected expression at end of input
  155 |     printf("Enter starting node for DFS
      |     ^~~~~~
./samples/SAFE/__tmp_ec1d0860.c:155:5: error: expected declaration or statement at end of input
